backend/tests/support/service_specimen.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: "blah"
  creationTimestamp: "2024-03-02T21:41:03Z"
  labels:
    app: demoapp
    app.kubernetes.io/managed-by: dfh
    app.kubernetes.io/name: demoapp
    env: stg
  name: demoapp-stg
  namespace: default
  resourceVersion: "710"
  uid: 110aa636-7140-4efa-bbad-5fb55eaf845e
spec:
  clusterIP: 10.96.168.196
  clusterIPs:
  - 10.96.168.196
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http
    port: 80
    protocol: TCP
    appProtocol: TCP
    targetPort: 80
  selector:
    app: demoapp
    env: stg
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
